Fixed code and unit tests